# notar

./: .env.example  .gitignore  LICENSE  PROGRESS.md  Procfile  README.md  conftest.py  pyproject.toml
docs/: index.html
examples/: agent.py  demo.py
registry/: app.py  db.py  models.py
sdk/notar/: __init__.py  client.py  identity.py
tests/: test_cards.py  test_client.py  test_identity.py  test_placeholder.py  test_registry.py
